Added test environment

--- a/src/app/changelog/changelog.component.html
+++ b/src/app/changelog/changelog.component.html
@@ -22,7 +22,23 @@
         <br/>
         <br/>
 
-        <h4>v3.6.2 09-01-2020 &nbsp; &nbsp; <span class="label label-default">Latest version</span></h4>
+        <h4>v3.7.1 11-02-2020 &nbsp; &nbsp; <span class="label label-default">Latest version</span></h4>
+        <p>- Improved report sharing security (hide index key when sharing an undefined index)</p>
+        <a href="https://github.com/GrepoDataTools/grepodata-backend/commit/0cb34a8fd25829786d4192235aae7d63d6002349#diff-efe31ecbd0dfeba267ed288538be83c0" target="_blank">
+          <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
+        </a>
+
+        <hr/>
+
+        <h4>v3.7.0 09-02-2020</h4>
+        <p>- Added Discord share buttons for inbox and forum reports</p>
+        <a href="https://github.com/grepodata/grepodata-backend/commit/c05d0dbadce95ed17bc28ef3e8d260b49bbe56ee" target="_blank">
+          <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
+        </a>
+
+        <hr/>
+
+        <h4>v3.6.2 09-01-2020</h4>
         <p>- Added optional buttons linking to player/alliance statistics on grepodata.com</p>
         <a href="https://github.com/grepodata/grepodata-userscript/commit/c0ca3ed42221b5267b273ff2374708fdbad8720e" target="_blank">
           <i class="fa fa-github" aria-hidden="true"></i> View changes on github.com
