--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -28,6 +28,17 @@
     &:hover, &:active, &:focus {
         background-color: #18bc9c;
     }
+
+}
+
+.nav-item.show {
+    .nav-link {
+        background-color: #18bc9c !important;
+    }
+}
+
+.nav-link.active {
+    background-color: #18bc9c !important;
 }
 
 .bg-header {
