--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@ $GrepodataFrontend-theme: mat-light-theme($GrepodataFrontend-primary, $Grepodata
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 
+$gd-primary: #18bc9c;
 $theme-colors: (
         primary: #18bc9c
 );
