--- a/src/styles.scss
+++ b/src/styles.scss
@@ -908,6 +908,9 @@ mat-paginator {
 .flag-cz {
     background: url('assets/images/flags.png') -0 -32px;
 }
+.flag-cs {
+    background: url('assets/images/flags.png') -0 -32px;
+}
 .flag-de {
     background: url('assets/images/flags.png') -32px -32px;
 }
