--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="card shadow-sm">
+<div class="card shadow-sm" *ngIf="!hidden">
   <div class="row justify-content-center no-gutters">
     <div class="col-12 col-lg-8">
       <div class="card-body">
