--- a/src/app/shared/dialogs/contact/contact.component.html
+++ b/src/app/shared/dialogs/contact/contact.component.html
@@ -21,7 +21,7 @@
 						<mat-checkbox name="privacy" [disabled]="loading" [(ngModel)]="privacy_agreed"></mat-checkbox>
 					</div>
 					<div class="col-11" style="text-align: left;">
-						<p>{{ 'inputs.privacy' | translate }} <a routerLink="/privacy" (click)="dialogRef.close()">{{ 'names.privacyPol' | translate }}</a></p>
+						<p>{{ 'inputs.privacy' | translate }} <a routerLink="/privacy" (click)="dialogRef.close()">Privacy Policy</a></p>
 					</div>
 				</div>
 				<br/>
