--- a/src/app/indexer/about/about.component.html
+++ b/src/app/indexer/about/about.component.html
@@ -35,19 +35,19 @@
 									<h1>View existing index</h1>
 									<p style="color: #18bc9b;">Enter the index code to view an existing index</p>
 									<form (submit)="openIndex()">
-										<!--<mat-form-field class="input-world">-->
-											<!--<input autocomplete #trigger="matAutocompleteTrigger" matInput placeholder="Index key" name="key_input"-->
-											       <!--[ngModel]="key_input" [matAutocomplete]="auto" (ngModelChange)="key_input=$event">-->
-											<!--<mat-icon *ngIf="objectKeys(all_indexes).length > 1" class="dropdown-caret" (click)="openAutocompleteIndex()">{{trigger.panelOpen?'expand_less':'expand_more'}}</mat-icon>-->
-											<!--<mat-autocomplete #auto="matAutocomplete">-->
-												<!--<mat-option style="font-size: 21px !important;" *ngFor="let index of all_indexes | keyvalue" [value]="index.value">-->
-			                    <!--<span class="gd-secondary">-->
-				                    <!--<div class="bg-flag flag-inline flag-{{index.key.substr(0,2)}}"></div>-->
-				                    <!--{{index.key}} ({{index.value}})-->
-			                    <!--</span>-->
-												<!--</mat-option>-->
-											<!--</mat-autocomplete>-->
-										<!--</mat-form-field>-->
+										<mat-form-field class="input-world">
+											<input name="key_input" ngDefaultControl autocomplete #trigger="matAutocompleteTrigger" matInput placeholder="Index key"
+											       [ngModel]="key_input" [matAutocomplete]="auto" (ngModelChange)="key_input=$event">
+											<mat-icon *ngIf="objectKeys(all_indexes).length > 1" class="dropdown-caret" (click)="openAutocompleteIndex()">{{trigger.panelOpen?'expand_less':'expand_more'}}</mat-icon>
+											<mat-autocomplete #auto="matAutocomplete">
+												<mat-option style="font-size: 21px !important;" *ngFor="let index of all_indexes | keyvalue" [value]="index.value">
+								                    <span class="gd-secondary">
+									                    <div class="bg-flag flag-inline flag-{{index.key.substr(0,2)}}"></div>
+									                    {{index.key}} ({{index.value}})
+								                    </span>
+												</mat-option>
+											</mat-autocomplete>
+										</mat-form-field>
 										<br/>
 										<div *ngIf="error!=''" style="color: #a94442; margin-top: -20px;">
 											<strong>Invalid index key!</strong> There exists no index for this key. Please try again.
@@ -171,35 +171,28 @@
 
 					<div class="row bs-wizard" style="border-bottom:0;">
 
-						<div class="col-xs-3 bs-wizard-step complete">
+						<div class="col-3 bs-wizard-step complete">
 							<div class="text-center bs-wizard-stepnum">Step 1</div>
 							<div class="progress"><div class="progress-bar"></div></div>
 							<a class="bs-wizard-dot" (click)="newIndex()"></a>
 							<div class="bs-wizard-info text-center"><strong>Create</strong> a new private index<br/><strong>Or,</strong> use an existing index</div>
 						</div>
 
-						<div class="col-xs-3 bs-wizard-step complete"><!-- complete -->
+						<div class="col-3 bs-wizard-step complete"><!-- complete -->
 							<div class="text-center bs-wizard-stepnum">Step 2</div>
 							<div class="progress"><div class="progress-bar"></div></div>
 							<a class="bs-wizard-dot" (click)="newIndex()"></a>
 							<div class="bs-wizard-info text-center"><strong>Install</strong> our userscript</div>
 						</div>
 
-						<div class="col-xs-3 bs-wizard-step complete"><!-- complete -->
+						<div class="col-3 bs-wizard-step complete"><!-- complete -->
 							<div class="text-center bs-wizard-stepnum">Step 3</div>
 							<div class="progress"><div class="progress-bar"></div></div>
 							<a class="bs-wizard-dot" (click)="newIndex()"></a>
 							<div class="bs-wizard-info text-center"><strong>Upload</strong> new reports<span class="hidden-xs hidden-sm"> from within the game by using the 'index +' button.</span></div>
 						</div>
 
-						<!--<div class="col-xs-3 bs-wizard-step disabled">&lt;!&ndash; complete &ndash;&gt;-->
-						<!--<div class="text-center bs-wizard-stepnum">Step 4</div>-->
-						<!--<div class="progress"><div class="progress-bar"></div></div>-->
-						<!--<a href="#" class="bs-wizard-dot"></a>-->
-						<!--<div class="bs-wizard-info text-center"><strong>Done!</strong> Share the index key with your allies and browse the intel.</div>-->
-						<!--</div>-->
-
-						<div class="col-xs-3 bs-wizard-step complete"><!-- complete -->
+						<div class="col-3 bs-wizard-step complete"><!-- complete -->
 							<div class="text-center bs-wizard-stepnum">Step 4</div>
 							<div class="progress"><div class="progress-bar"></div></div>
 							<a class="bs-wizard-dot" (click)="newIndex()"></a>
@@ -221,7 +214,7 @@
 								</mat-card-title>
 								<mat-card-content class="decorated-card-content" style="border: 1px solid #138F77;">
 									<br/>
-									<!--<app-faq></app-faq>-->
+									<app-faq></app-faq>
 								</mat-card-content>
 							</mat-card>
 						</div>
@@ -244,7 +237,7 @@
 				<br/>
 				<br/>
 				<div class="container text-center">
-					<div class="col-xs-12 col-xs-offset-0 col-sm-6 col-sm-offset-3">
+					<div class="col-xs-12 offset-xs-0 col-md-6 offset-md-3">
 						<button style="font-size: 30px; padding: 10px; width: 100%;" mat-button class="mat-raised-button mat-primary btn-no-index" (click)="newIndex()">
 							Create a new index!
 						</button>
