--- a/src/styles.scss
+++ b/src/styles.scss
@@ -155,6 +155,13 @@ mat-paginator {
     font-weight: 900 !important;
 }
 
+.btn-xs {
+    padding: 1px 5px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+}
+
 .alert-gd-1 {
     background-color: #fafafa;
     border: 2px solid #cdcdcd;
