--- a/src/styles.scss
+++ b/src/styles.scss
@@ -162,6 +162,10 @@ mat-paginator {
     border-radius: 3px;
 }
 
+.col-padding-xs {
+    padding: 3px !important;
+}
+
 .alert-gd-1 {
     background-color: #fafafa;
     border: 2px solid #cdcdcd;
